--- a/app/src/main/res/layout/activity_crop_customer_manager.xml
+++ b/app/src/main/res/layout/activity_crop_customer_manager.xml
@@ -239,9 +239,8 @@
                             android:layout_height="match_parent"
                             android:padding="4dp"
                             android:labelFor="@+id/txt_crop_spray_rate"
-                            android:text="@string/usd"
+                            android:text="@string/ugx"
                             android:gravity="center_vertical"
-                            android:textColor="@color/colorPrimary"
                             android:textStyle="bold"
 
                             />
