--- a/app/src/main/res/layout/activity_crop_supplier_manager.xml
+++ b/app/src/main/res/layout/activity_crop_supplier_manager.xml
@@ -239,7 +239,7 @@
                             android:layout_height="match_parent"
                             android:padding="4dp"
                             android:labelFor="@+id/txt_crop_spray_rate"
-                            android:text="@string/usd"
+                            android:text="@string/ugx"
                             android:gravity="center_vertical"
                             android:textColor="@color/colorPrimary"
                             android:textStyle="bold"
@@ -278,7 +278,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Invoice Address"
+                        android:text="Address"
                         android:textStyle="bold"
                         android:textSize="18sp"/>
 
