--- a/app/src/main/res/layout/content_crop_estimate_manager.xml
+++ b/app/src/main/res/layout/content_crop_estimate_manager.xml
@@ -76,6 +76,7 @@
                             android:id="@+id/txt_crop_estimate_number"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:hint="Enter.."
                             android:background="@drawable/input_shapes"
                             android:textColor="@color/blackText"
                             android:textSize="14sp" />
@@ -99,7 +100,6 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@drawable/input_shapes"
-                            android:textColor="@color/blackText"
                             android:hint="@string/enter_hint"
                             android:textSize="14sp" />
                     </LinearLayout>
@@ -481,7 +481,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/input_shapes"
+                    android:background="@drawable/input_shapes_grey"
                     android:orientation="horizontal">
 
 
