--- a/app/src/main/res/layout/content_crop_invoices_list.xml
+++ b/app/src/main/res/layout/content_crop_invoices_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,18 +7,17 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".activities.CropInvoicesListActivity"
     tools:showIn="@layout/activity_crop_invoices_list">
+   <ScrollView
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/crop_invoice_recyc_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
-        android:layout_marginTop="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintBottom_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        android:layout_marginTop="8dp"
+        >
 
     </android.support.v7.widget.RecyclerView>
-</android.support.constraint.ConstraintLayout>
+   </ScrollView>
+</LinearLayout>
