--- a/app/src/main/res/layout/crop_invoice_list_card.xml
+++ b/app/src/main/res/layout/crop_invoice_list_card.xml
@@ -34,6 +34,7 @@
                     <TextView
                         android:id="@+id/txt_crop_invoice_card_customer_name"
                         android:textSize="14sp"
+                        android:textStyle="bold"
                         android:textColor="#696666"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -50,7 +51,7 @@
                         <ImageView
                             android:id="@+id/img_crop_product_card_more"
                             android:layout_width="25dp"
-                            android:layout_height="match_parent"
+                            android:layout_height="25dp"
                             android:backgroundTint="@color/black"
                             android:textColor="@color/darker_gray"
                             app:srcCompat="@drawable/more_options_icon" />
@@ -91,7 +92,7 @@
                             android:gravity="right"
                             android:layout_marginLeft="5dp"
                             android:text="UGX"
-                            android:textColor="#696666"
+                            android:textColor="@color/red"
                             android:textSize="14dp" />
                         <TextView
                             android:id="@+id/txt_crop_product_card_quantitty"
@@ -100,7 +101,7 @@
                             android:layout_marginLeft="5dp"
                             android:text="300,000"
                             android:layout_marginRight="10dp"
-                            android:textColor="#696666"
+                            android:textColor="@color/red"
                             android:textSize="14dp" />
 
 
