--- a/app/src/main/res/layout/crop_record_payment_invoice.xml
+++ b/app/src/main/res/layout/crop_record_payment_invoice.xml
@@ -70,32 +70,32 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
+                    android:layout_weight="1"
                     android:layout_marginBottom="10dp"
                     android:layout_marginRight="10dp">
 
                     <TextView
 
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/payment_date"
-                        android:layout_weight="0.6"
                         android:textColor="@color/colorPrimary"
                         android:textStyle="bold"
                         android:textSize="16sp" />
 
                     <EditText
                         android:id="@+id/txt_crop_record_payment_invoice_date"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:ems="10"
+
                         android:hint="Enter.."
                         android:inputType="none"
                         android:textSize="14sp"
                         android:background="@drawable/input_shapes"
-                        android:layout_weight="0.4"
+
 
 
                         />
@@ -106,6 +106,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
+                    android:layout_weight="1"
                     android:layout_marginBottom="10dp">
 
 
@@ -141,32 +142,32 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
+                    android:layout_weight="1"
                     android:layout_marginBottom="10dp"
                     android:layout_marginRight="10dp">
 
                     <TextView
 
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/payment_mode"
-                        android:layout_weight="0.6"
+
                         android:textColor="@color/colorPrimary"
                         android:textStyle="bold"
                         android:textSize="16sp" />
 
-                    <EditText
+                    <Spinner
                         android:id="@+id/txt_crop_record_payment_invoice_payment_mode"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:ems="10"
+                        android:entries="@array/sp_crop_income_expense_payment_mode"
                         android:hint="Enter.."
 
                         android:textSize="14sp"
                         android:background="@drawable/input_shapes"
-                        android:layout_weight="0.4"
 
 
                         />
@@ -177,6 +178,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
+                    android:layout_weight="1"
                     android:layout_marginBottom="10dp">
 
 
@@ -188,7 +190,6 @@
                         android:textColor="@color/colorPrimary"
                         android:textStyle="bold"
                         android:textSize="16sp"
-                        android:layout_weight="1"
                         />
 
                     <EditText
@@ -200,8 +201,6 @@
                         android:inputType="number"
                         android:textSize="14sp"
                         android:background="@drawable/input_shapes"
-                        android:layout_weight="1"
-
                         />
 
                 </LinearLayout>
