--- a/app/src/main/res/layout/nav_header_navigation_drawer.xml
+++ b/app/src/main/res/layout/nav_header_navigation_drawer.xml
@@ -36,6 +36,7 @@
         android:orientation="horizontal">
 
         <LinearLayout
+            android:id="@+id/layout_user_profile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
