--- a/app/src/main/res/layout/content_crop_dashboard.xml
+++ b/app/src/main/res/layout/content_crop_dashboard.xml
@@ -400,6 +400,7 @@
                             </LinearLayout>
 
                             <LinearLayout
+                                android:id="@+id/layout_crop_dashboard_weather_forecast"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="5dp"
