--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -33,6 +33,14 @@
                 android:layout_marginLeft="20.0dip"
                 android:layout_marginRight="20.0dip"
                 android:orientation="vertical">
+                <TextView
+                    android:id="@+id/text_view_crop_user_error"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/yellow"
+                    android:visibility="gone"
+                    android:text="This ie the error we have found at the server end"
+                    android:layout_marginBottom="10dp"/>
 
                 <EditText
                     android:id="@+id/txt_crop_user_current_password"
