--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -45,5 +45,6 @@
     <color name="light_gray">#eeeeee</color>
 
     <color name="design_bottom_navigation_shadow_color">#14000000</color>
+    <color name="yellow">#ffff00</color>
 
 </resources>
