--- a/app/src/main/res/layout/content_crop_roistep1.xml
+++ b/app/src/main/res/layout/content_crop_roistep1.xml
@@ -15,79 +15,22 @@
         android:orientation="vertical"
         >
 
-        <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
-        <LinearLayout
-            android:layout_width="0dp"
+        <TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_weight="1"
-            >
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/estimate_number"
-                android:textColor="@color/colorPrimary"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_weight="1"
-            >
-            <Spinner
-                android:id="@+id/spinner_crop_estimate_customer_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/input_shapes"
-                android:textSize="14sp" />
-        </LinearLayout>
-    </LinearLayout>
-        <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_weight="1"
-            >
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Average Market Price"
-                android:textColor="@color/colorPrimary"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_weight="1"
-            >
-            <EditText
-                android:id="@+id/txt_crop_ro1_step_avg_price"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/input_shapes"
-                android:hint="@string/enter_hint"
-                android:inputType="number"
-                android:textSize="14sp" />
-        </LinearLayout>
-        </LinearLayout>
+            android:text="Estimated Revenue"
+            android:textColor="@color/colorPrimary"
+            android:textSize="16sp"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            >
+            android:layout_margin="8dp"
+            android:gravity="center_vertical">
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -97,10 +40,104 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:text="@string/yield_units"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="16sp"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_weight="1"
+                >
+                <Spinner
+                    android:id="@+id/spinner_crop_roi_step_1_yield_units"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/input_shapes"
+                    android:entries="@array/crop_roi_yield_units"
+                    android:textSize="14sp" />
+            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_margin="8dp"
+            android:gravity="center_vertical"
+            >
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_weight="1"
+
+                >
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:text="Yield Per Acre"
                     android:textColor="@color/colorPrimary"
                     android:textSize="16sp"
-                    android:textStyle="bold" />
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:background="@color/gray_mh"
+                android:layout_weight="1"
+                >
+
+
+                <EditText
+                    android:id="@+id/txt_crop_ro1_step_yield"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/input_shapes"
+                    android:hint="@string/enter_hint"
+                    android:inputType="number"
+                    android:layout_weight="0.9"
+                    android:textAlignment="textEnd"
+                    android:textSize="14sp" />
+                <TextView
+                    android:id="@+id/txt_crop_ro1_step_label_yield_units"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Units"
+                    android:layout_weight="0.1"
+                    android:textSize="14sp"
+                    android:textAlignment="center"
+
+                    android:gravity="center_vertical"
+
+                    />
+
+            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_margin="8dp"
+            android:gravity="center_vertical"
+        >
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_weight="1"
+                >
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Average Market Price"
+
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="16sp"
+                    />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="0dp"
@@ -109,19 +146,23 @@
                 android:layout_weight="1"
                 >
                 <EditText
-                    android:id="@+id/txt_crop_ro1_step_yield"
+                    android:id="@+id/txt_crop_ro1_step_1_avg_price"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/input_shapes"
                     android:hint="@string/enter_hint"
                     android:inputType="number"
+                    android:textAlignment="textEnd"
                     android:textSize="14sp" />
             </LinearLayout>
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_margin="8dp"
+            android:gravity="center_vertical"
             >
             <LinearLayout
                 android:layout_width="0dp"
@@ -135,7 +176,7 @@
                     android:text="Other Income"
                     android:textColor="@color/colorPrimary"
                     android:textSize="16sp"
-                    android:textStyle="bold" />
+                    />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="0dp"
@@ -150,8 +191,77 @@
                     android:inputType="number"
                     android:background="@drawable/input_shapes"
                     android:hint="@string/enter_hint"
+                    android:textAlignment="textEnd"
                     android:textSize="14sp" />
             </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_margin="8dp"
+            android:gravity="center_vertical"
+            >
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_weight="1"
+                >
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Est Gross Revenue"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_weight="1"
+                android:background="@color/light_gray"
+                >
+                <TextView
+                    android:id="@+id/txt_crop_ro1_step_1_est_gross_revenue"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="textEnd"
+                    android:layout_margin="4dp"
+                    android:textStyle="bold"
+                    android:hint="@string/enter_hint"
+                    android:textSize="14sp" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_margin="8dp"
+            android:gravity="center_vertical"
+            >
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_weight="1"
+                >
+                <Button
+                    android:id="@+id/txt_crop_roi_step_1_crop_btn_next"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/next"
+                    android:textAllCaps="false"
+                    style="@style/Button"
+                    android:textColor="@color/whiteColor"
+                    android:drawableRight="@drawable/arrow_right_white_24dp"
+                    android:textSize="16sp"
+                    />
+            </LinearLayout>
+
         </LinearLayout>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
