--- a/app/src/main/res/layout/content_crop_fertilizer_calculator_entry.xml
+++ b/app/src/main/res/layout/content_crop_fertilizer_calculator_entry.xml
@@ -20,13 +20,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_margin="8dp"
-                android:gravity="center_vertical">
+                android:layout_margin="4dp"
+               >
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_weight="1"
+                    android:padding="4dp"
                     >
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -54,7 +55,7 @@
                             android:hint="Enter.."
                             android:background="@drawable/input_shapes"
                             android:textSize="14sp"
-
+                            android:spinnerMode="dialog"
 
                             />
 
@@ -65,12 +66,13 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_weight="1"
+                    android:padding="4dp"
                     >
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:layout_marginBottom="15dp"
+
                         >
 
                         <TextView
@@ -101,7 +103,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_margin="8dp"
+                android:layout_margin="4dp"
                 android:gravity="center_vertical">
                 <LinearLayout
                     android:layout_width="0dp"
@@ -156,7 +158,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:layout_margin="4dp"
                 android:text="Nutrients"
                 android:textAlignment="textStart"
                 android:textColor="@color/colorPrimary"
@@ -167,7 +169,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_margin="8dp"
+                android:layout_margin="4dp"
                 android:gravity="center_vertical">
                 <LinearLayout
                     android:layout_width="0dp"
@@ -213,7 +215,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_margin="8dp"
+                android:layout_margin="4dp"
                 android:gravity="center_vertical">
                 <LinearLayout
                     android:layout_width="0dp"
@@ -258,7 +260,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_margin="8dp"
+                android:layout_margin="4dp"
                 android:gravity="center_vertical">
                 <LinearLayout
                     android:layout_width="0dp"
@@ -304,7 +306,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:layout_margin="4dp"
                 android:text="Select Fertilizers"
                 android:textAlignment="textStart"
                 android:textColor="@color/colorPrimary"
@@ -315,13 +317,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_margin="8dp"
-                android:gravity="center_vertical">
+                android:layout_margin="4dp"
+                >
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_weight="1"
+                    android:padding="4dp"
                     >
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -348,6 +351,7 @@
                             android:hint="Enter.."
                             android:background="@drawable/input_shapes"
                             android:textSize="14sp"
+                            android:spinnerMode="dialog"
                             />
 
                         <TextView
@@ -368,12 +372,12 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_weight="1"
+                    android:padding="4dp"
                     >
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:layout_marginBottom="15dp"
                         >
 
                         <TextView
@@ -406,19 +410,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_margin="8dp"
-                android:gravity="center_vertical">
+                android:layout_margin="4dp"
+                >
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_weight="1"
+                    android:padding="4dp"
                     >
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:layout_marginBottom="10dp">
+                       >
 
                         <TextView
 
@@ -439,6 +444,7 @@
                             android:hint="Enter.."
                             android:background="@drawable/input_shapes"
                             android:textSize="14sp"
+                            android:spinnerMode="dialog"
                             />
 
                         <TextView
@@ -459,12 +465,12 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_weight="1"
+                    android:padding="4dp"
                     >
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:layout_marginBottom="15dp"
                         >
 
                         <TextView
@@ -497,19 +503,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_margin="8dp"
-                android:gravity="center_vertical">
+                android:layout_margin="4dp"
+                >
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_weight="1"
+                    android:padding="4dp"
                     >
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:layout_marginBottom="10dp">
+                        >
 
                         <TextView
 
@@ -530,6 +537,7 @@
                             android:hint="Enter.."
                             android:background="@drawable/input_shapes"
                             android:textSize="14sp"
+                            android:spinnerMode="dialog"
                             />
 
                         <TextView
@@ -550,12 +558,12 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_weight="1"
+                    android:padding="4dp"
                     >
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:layout_marginBottom="15dp"
                         >
 
                         <TextView
